# blahaj-bot

./: .gitignore  flake.nix  package.nix  pyproject.toml
blahaj_bot/: __init__.py  backlog.py  client.py  role.py
blahaj_bot/cogs/: backlog.py  basic.py  quotes.py  roles.py
hello_world/: __init__.py
nixos-modules/: blahaj-bot-service.nix  default.nix
