[project]
name = "blahaj-bot"
description = "Bot for Discord Servers"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  {name = "Gwendolyn Kornak", email = "gwen@gwenkornak.ca"},
]
dynamic = ["version"]
dependencies = [
    "backloggery",
    "discord>=2.3.2",
    "pymongo>=4.13.0",
    "urllib3>=2.2.3",
]

[project.scripts]
bot = "blahaj_bot:bot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "blahaj_bot/__init__.py"


[dependency-groups]
dev = [
    "ruff>=0.6.7",
]

[tool.uv.sources]
backloggery = { git = "https://github.com/transgwender/UNOFFICIAL-backloggery-api" }
