[project]
name = "blahaj-bot"
description = "Bot for Discord Servers"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  {name = "Gwendolyn Kornak", email = "gwen@gwenkornak.ca"},
]
dynamic = ["version"]
dependencies = [
    "audioop-lts>=0.2.1",
    "backloggery",
    "py-cord>=2.6.1",
    "pymongo>=4.13.0",
    "requests>=2.32.5",
    "urllib3>=2.3.0",
]

[project.scripts]
bot = "blahaj_bot:bot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "blahaj_bot/__init__.py"

[tool.uv.sources]
backloggery = { git = "https://github.com/transgwender/UNOFFICIAL-backloggery-api" }


[dependency-groups]
dev = [
    "ruff>=0.6.7",
]
